GL-7 [Sirius][Sequence] Add CombinedFragment concept
- CombinedFragment creation
- Deletion
- Label
- Implementation of the reorder APIs for complex reorders involving
CombinedFragments

Bug: https://gitlab.eclipse.org/eclipse/papyrus/org.eclipse.papyrus-desktop/-/issues/7
Signed-off-by: Gwendal Daniel <gwendal.daniel@obeosoft.com>