@@ -17,21 +17,27 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
+import org.eclipse.emf.ecore.EAnnotation;
 import org.eclipse.emf.ecore.EObject;
+import org.eclipse.emf.ecore.EcoreFactory;
 import org.eclipse.papyrus.sirius.uml.diagram.common.services.tests.AbstractServicesTest;
 import org.eclipse.papyrus.sirius.uml.diagram.sequence.services.SequenceDiagramReorderServices;
+import org.eclipse.papyrus.sirius.uml.diagram.sequence.services.SequenceDiagramServices;
 import org.eclipse.uml2.uml.ActionExecutionSpecification;
+import org.eclipse.uml2.uml.CombinedFragment;
+import org.eclipse.uml2.uml.Element;
 import org.eclipse.uml2.uml.ExecutionOccurrenceSpecification;
 import org.eclipse.uml2.uml.ExecutionSpecification;
 import org.eclipse.uml2.uml.Interaction;
 import org.eclipse.uml2.uml.InteractionFragment;
+import org.eclipse.uml2.uml.InteractionOperand;
 import org.eclipse.uml2.uml.Lifeline;
 import org.eclipse.uml2.uml.Message;
 import org.eclipse.uml2.uml.MessageOccurrenceSpecification;
-import org.eclipse.uml2.uml.OccurrenceSpecification;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -57,6 +63,8 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 	@Before
 	public void setUp() {
 		reorderServices = new SequenceDiagramReorderServices();
+		interaction = createInteractionWithTwoLifelines();
+		interaction.createEAnnotation(SequenceDiagramServices.ORDERING_ANNOTATION_SOURCE);
 	}
 
 	@Test
@@ -74,29 +82,25 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 
 	@Test
 	public void testGetEndsOrderingEmptyInteraction() {
-		/*
-		 * Need to create the instances manually because we don't want the interaction to contain the message occurrence specifications.
-		 */
-		interaction = create(Interaction.class);
-		messageOccurrenceSpecification1 = create(MessageOccurrenceSpecification.class);
-		messageOccurrenceSpecification2 = create(MessageOccurrenceSpecification.class);
-		List<EObject> result = reorderServices.getEndsOrdering(interaction, List.of(messageOccurrenceSpecification1, messageOccurrenceSpecification2));
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
+		Interaction emptyInteraction = createInteractionWithTwoLifelines();
+		List<EObject> result = reorderServices.getEndsOrdering(emptyInteraction, List.of(getStartAnnotation(executionSpecification), getFinishAnnotation(executionSpecification)));
 		assertTrue(result.isEmpty());
 	}
 
 	@Test
 	public void testGetEndsOrderingEmptyEventEnds() {
-		createInteractionWithTwoMessageOccurrenceSpecifications();
-		List<EObject> result = reorderServices.getEndsOrdering(interaction, Collections.emptyList());
+		createExecutionSpecification(interaction, lifeline1);
+		List<EObject> result = reorderServices.getEndsOrdering(interaction, List.of());
 		assertTrue(result.isEmpty());
 	}
 
 	@Test
 	public void testGetEndsOrderingSubsetEventEnds() {
-		createInteractionWithTwoMessageOccurrenceSpecifications();
-		List<EObject> result = reorderServices.getEndsOrdering(interaction, List.of(messageOccurrenceSpecification1));
-		assertTrue(result.size() == 1);
-		assertEquals(messageOccurrenceSpecification1, result.get(0));
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
+		List<EObject> result = reorderServices.getEndsOrdering(interaction, List.of(getStartAnnotation(executionSpecification)));
+		assertEquals(1, result.size());
+		assertEquals(getStartAnnotation(executionSpecification), result.get(0));
 	}
 
 	@Test
@@ -108,13 +112,11 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 
 	@Test
 	public void testReorderLifelineNullLifeline() {
-		createInteractionWithTwoLifelines();
 		assertThrows(NullPointerException.class, () -> reorderServices.reorderLifeline(interaction, null, null));
 	}
 
 	@Test
 	public void testReorderLifelineNullPredecessor() {
-		createInteractionWithTwoLifelines();
 		reorderServices.reorderLifeline(interaction, lifeline2, null);
 		assertEquals(lifeline2, interaction.getLifelines().get(0));
 		assertEquals(lifeline1, interaction.getLifelines().get(1));
@@ -122,7 +124,6 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 
 	@Test
 	public void testReorderLifelineLeftToRight() {
-		createInteractionWithTwoLifelines();
 		reorderServices.reorderLifeline(interaction, lifeline1, lifeline2);
 		assertEquals(lifeline2, interaction.getLifelines().get(0));
 		assertEquals(lifeline1, interaction.getLifelines().get(1));
@@ -130,7 +131,6 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 
 	@Test
 	public void testReorderLifelineRightToLeft() {
-		createInteractionWithTwoLifelines();
 		/*
 		 * Add a third lifeline to test right to left with a non-null predecessor.
 		 */
@@ -149,18 +149,14 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 	}
 
 	/**
-	 * Reorders a single {@link ExecutionSpecification} to be the first fragment of its interaction.
-	 * <p>
-	 * The interaction doesn't contain other {@link ExecutionSpecification} instances.
-	 * <p>
-	 * The reordered execution is <i>unordered</i>, which means that the interaction contains the {@link ExecutionSpecification} and its {@link OccurrenceSpecification}s, in this order. The reordered {@link ExecutionSpecification} (and its
-	 * {@link OccurrenceSpecification}s) are initially at the end of the interaction's fragment list. This replicates the creation from {@link CommonDiagramServices}.
+	 * Reorders an {@link ExecutionSpecification} to be the first fragment of its interaction.
 	 */
 	@Test
-	public void testReorderFragmentSingleNewExecutionSpecificationToFirst() {
-		ExecutionSpecification executionSpecification = addUnorderedExecutionSpecificationToInteraction();
+	public void testReorderSingleExecutionToFirst() {
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
 		// reordering to first means that there is no startingEndPredecessor/finishingEndPredecessor
 		reorderServices.reorderFragment(executionSpecification, null, null);
+		assertContains(getOrdering(), List.of(this.getStartAnnotation(executionSpecification), this.getFinishAnnotation(executionSpecification)));
 		assertContains(interaction.getFragments(), List.of(
 				executionSpecification.getStart(),
 				executionSpecification,
@@ -171,16 +167,18 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 	 * Reorders an {@link ExecutionSpecification} to be the first fragment of its interaction.
 	 * <p>
 	 * The interaction contains another {@link ExecutionSpecification} initially above the reordered one.
-	 * <p>
-	 * The reordered execution is <i>unordered</i>, which means that the interaction contains the {@link ExecutionSpecification} and its {@link OccurrenceSpecification}s, in this order. The reordered {@link ExecutionSpecification} (and its
-	 * {@link OccurrenceSpecification}s) are initially at the end of the interaction's fragment list. This replicates the creation from {@link CommonDiagramServices}.
 	 */
 	@Test
-	public void testReorderFragmentNewExecutionSpecificationToFirst() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addUnorderedExecutionSpecificationToInteraction();
+	public void testReorderExecutionToFirst() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		ExecutionSpecification executionSpecification2 = createExecutionSpecification(interaction, lifeline1);
 		// reordering to first means that there is no startingEndPredecessor/finishingEndPredecessor
 		reorderServices.reorderFragment(executionSpecification2, null, null);
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification2),
+				this.getFinishAnnotation(executionSpecification2),
+				this.getStartAnnotation(executionSpecification1),
+				this.getFinishAnnotation(executionSpecification1)));
 		assertContains(interaction.getFragments(), List.of(
 				executionSpecification2.getStart(),
 				executionSpecification2,
@@ -192,39 +190,42 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 
 	/**
 	 * Reorders an {@link ExecutionSpecification} below an existing one.
-	 * <p>
-	 * The reordered execution is <i>unordered</i>, which means that the interaction contains the {@link ExecutionSpecification} and its {@link OccurrenceSpecification}s, in this order. The reordered {@link ExecutionSpecification} (and its
-	 * {@link OccurrenceSpecification}s) are initially at the end of the interaction's fragment list. This replicates the creation from {@link CommonDiagramServices}.
 	 */
 	@Test
-	public void testReorderFragmentNewExecutionSpecificationBelowExistingOne() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addUnorderedExecutionSpecificationToInteraction();
-		// startingEndPredecessor and finishingEndPredecessor are always equal when reordering a new ExecutionSpecification.
-		reorderServices.reorderFragment(executionSpecification2, executionSpecification1.getFinish(), executionSpecification1.getFinish());
-		List<InteractionFragment> fragments = interaction.getFragments();
-		assertContains(fragments, List.of(
-				executionSpecification1.getStart(),
-				executionSpecification1,
-				executionSpecification1.getFinish(),
+	public void testReorderExecutionAfterExecution() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		ExecutionSpecification executionSpecification2 = createExecutionSpecification(interaction, lifeline1);
+		reorderServices.reorderFragment(executionSpecification1, getFinishAnnotation(executionSpecification2), getStartAnnotation(executionSpecification1));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification2),
+				this.getFinishAnnotation(executionSpecification2),
+				this.getStartAnnotation(executionSpecification1),
+				this.getFinishAnnotation(executionSpecification1)));
+		assertContains(interaction.getFragments(), List.of(
 				executionSpecification2.getStart(),
 				executionSpecification2,
-				executionSpecification2.getFinish()));
+				executionSpecification2.getFinish(),
+				executionSpecification1.getStart(),
+				executionSpecification1,
+				executionSpecification1.getFinish()));
 	}
 
 	/**
 	 * Reorders an {@link ExecutionSpecification} between two existing ones.
-	 * <p>
-	 * The reordered execution is <i>unordered</i>, which means that the interaction contains the {@link ExecutionSpecification} and its {@link OccurrenceSpecification}s, in this order. The reordered {@link ExecutionSpecification} (and its
-	 * {@link OccurrenceSpecification}s) are initially at the end of the interaction's fragment list. This replicates the creation from {@link CommonDiagramServices}.
 	 */
 	@Test
-	public void testReorderFragmentNewExecutionSpecificationBetweenExistingOnes() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification3 = addUnorderedExecutionSpecificationToInteraction();
-		// startingEndPredecessor and finishingEndPredecessor are always equal when reordering a new ExecutionSpecification.
-		reorderServices.reorderFragment(executionSpecification3, executionSpecification1.getFinish(), executionSpecification1.getFinish());
+	public void testReorderExecutionBetweenExecutions() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		ExecutionSpecification executionSpecification2 = createExecutionSpecification(interaction, lifeline1);
+		ExecutionSpecification executionSpecification3 = createExecutionSpecification(interaction, lifeline1);
+		reorderServices.reorderFragment(executionSpecification3, getFinishAnnotation(executionSpecification1), getStartAnnotation(executionSpecification3));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification1),
+				this.getFinishAnnotation(executionSpecification1),
+				this.getStartAnnotation(executionSpecification3),
+				this.getFinishAnnotation(executionSpecification3),
+				this.getStartAnnotation(executionSpecification2),
+				this.getFinishAnnotation(executionSpecification2)));
 		assertContains(interaction.getFragments(), List.of(
 				executionSpecification1.getStart(),
 				executionSpecification1,
@@ -237,223 +238,186 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 				executionSpecification2.getFinish()));
 	}
 
-	/**
-	 * Reorders an {@link ExecutionSpecification} inside an enclosing one.
-	 * <p>
-	 * This happens when moving an {@link ExecutionSpecification} to a location that is covered by another {@link ExecutionSpecification} on a different lifeline. The reordered {@link ExecutionSpecification} is initially below the enclosing one.
-	 */
 	@Test
-	public void testReorderFragmentExecutionSpecificationInsideEnclosingOne() {
-		ExecutionSpecification enclosingExecutionSpecification = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification reorderedExecutionSpecification = addOrderedExecutionSpecificationToInteraction();
-		// The startingEndPredecessor is the start occurrence of the enclosing execution. The finishingEndPredecessor is the reordered execution's starting end, since there isn't another execution between its start and finish.
-		reorderServices.reorderFragment(reorderedExecutionSpecification, enclosingExecutionSpecification.getStart(), reorderedExecutionSpecification.getStart());
-		assertContains(interaction.getFragments(), List.of(
-				enclosingExecutionSpecification.getStart(),
-				enclosingExecutionSpecification,
-				reorderedExecutionSpecification.getStart(),
-				reorderedExecutionSpecification,
-				reorderedExecutionSpecification.getFinish(),
-				enclosingExecutionSpecification.getFinish()));
+	public void testReorderExecutionInsideCombinedFragment() {
+		CombinedFragment combinedFragment = createCombinedFragment(interaction, lifeline1);
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
+		assertEquals(1, combinedFragment.getOperands().size());
+		reorderServices.reorderFragment(executionSpecification, getStartAnnotation(combinedFragment.getOperands().get(0)), getStartAnnotation(executionSpecification));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(combinedFragment),
+				this.getStartAnnotation(combinedFragment.getOperands().get(0)),
+				this.getStartAnnotation(executionSpecification),
+				this.getFinishAnnotation(executionSpecification),
+				this.getFinishAnnotation(combinedFragment)));
+		assertContains(interaction.getFragments(), List.of(combinedFragment));
+		assertContains(combinedFragment.getOperands().get(0).getFragments(), List.of(
+				executionSpecification.getStart(),
+				executionSpecification,
+				executionSpecification.getFinish()));
 	}
 
-	/**
-	 * Reorders an {@link ExecutionSpecification} inside an enclosing one.
-	 * <p>
-	 * The reordered execution is <i>unordered</i>, which means that the interaction contains the {@link ExecutionSpecification} and its {@link OccurrenceSpecification}s, in this order. The reordered {@link ExecutionSpecification} (and its
-	 * {@link OccurrenceSpecification}s) are initially at the end of the interaction's fragment list. This replicates the creation from {@link CommonDiagramServices}.
-	 * <p>
-	 * The reorder's <code>startingEndPredecessor</code> and <code>finishingEndPredecessor</code> are both equal to the enclosing execution's start. This is typically the case when the reorder happens as part of an {@link ExecutionSpecification} creation.
-	 */
 	@Test
-	public void testReorderFragmentNewExecutionSpecificationInsideEnclosingOne() {
-		ExecutionSpecification enclosingExecutionSpecification = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification reorderedExecutionSpecification = addUnorderedExecutionSpecificationToInteraction();
-		// The startingEndPredecessor is the start occurrence of the enclosing execution. The finishingEndPredecessor is also the start occurrence of the enclosing execution, this typically happens on execution creation.
-		reorderServices.reorderFragment(reorderedExecutionSpecification, enclosingExecutionSpecification.getStart(), enclosingExecutionSpecification.getStart());
+	public void testReorderMessageFirst() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		Message message = createMessage(interaction, lifeline1, lifeline2);
+		reorderServices.reorderMessage(message, null, null);
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(message),
+				this.getFinishAnnotation(message),
+				this.getStartAnnotation(executionSpecification1),
+				this.getFinishAnnotation(executionSpecification1)));
 		assertContains(interaction.getFragments(), List.of(
-				enclosingExecutionSpecification.getStart(),
-				enclosingExecutionSpecification,
-				reorderedExecutionSpecification.getStart(),
-				reorderedExecutionSpecification,
-				reorderedExecutionSpecification.getFinish(),
-				enclosingExecutionSpecification.getFinish()));
+				message.getSendEvent(),
+				message.getReceiveEvent(),
+				executionSpecification1.getStart(),
+				executionSpecification1,
+				executionSpecification1.getFinish()));
 	}
 
-	/**
-	 * Reorders an {@link ExecutionSpecification} below its enclosing one.
-	 */
 	@Test
-	public void testReorderFragmentExecutionSpecificationBelowEnclosingOne() {
-		ExecutionSpecification enclosingExecutionSpecification = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification reorderedExecutionSpecification = addOrderedExecutionSpecificationToInteraction(enclosingExecutionSpecification);
-		// The finishingEndPredecessor is the reordered execution's starting end, since there isn't another execution between its start and finish.
-		reorderServices.reorderFragment(reorderedExecutionSpecification, enclosingExecutionSpecification.getFinish(), reorderedExecutionSpecification.getStart());
+	public void testReorderMessageAfterExecution() {
+		Message message = createMessage(interaction, lifeline1, lifeline2);
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
+		reorderServices.reorderMessage(message, getFinishAnnotation(executionSpecification), getStartAnnotation(message));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification),
+				this.getFinishAnnotation(executionSpecification),
+				this.getStartAnnotation(message),
+				this.getFinishAnnotation(message)));
 		assertContains(interaction.getFragments(), List.of(
-				enclosingExecutionSpecification.getStart(),
-				enclosingExecutionSpecification,
-				enclosingExecutionSpecification.getFinish(),
-				reorderedExecutionSpecification.getStart(),
-				reorderedExecutionSpecification,
-				reorderedExecutionSpecification.getFinish()));
+				executionSpecification.getStart(),
+				executionSpecification,
+				executionSpecification.getFinish(),
+				message.getSendEvent(),
+				message.getReceiveEvent()));
 	}
 
-	/**
-	 * Reorders an {@link ExecutionSpecification} above its enclosing one, and below another {@link ExecutionSpecification}.
-	 */
 	@Test
-	public void testReorderFragmentExecutionSpecificationAboveEnclosingOne() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification enclosingExecutionSpecification = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification reorderedExecutionSpecification = addOrderedExecutionSpecificationToInteraction(enclosingExecutionSpecification);
-		reorderServices.reorderFragment(reorderedExecutionSpecification, executionSpecification1.getFinish(), reorderedExecutionSpecification.getStart());
+	public void testReorderMessageBetweenExecutions() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		ExecutionSpecification executionSpecification2 = createExecutionSpecification(interaction, lifeline1);
+		Message message = createMessage(interaction, lifeline1, lifeline2);
+		reorderServices.reorderMessage(message, getFinishAnnotation(executionSpecification1), getStartAnnotation(message));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification1),
+				this.getFinishAnnotation(executionSpecification1),
+				this.getStartAnnotation(message),
+				this.getFinishAnnotation(message),
+				this.getStartAnnotation(executionSpecification2),
+				this.getFinishAnnotation(executionSpecification2)));
 		assertContains(interaction.getFragments(), List.of(
 				executionSpecification1.getStart(),
 				executionSpecification1,
 				executionSpecification1.getFinish(),
-				reorderedExecutionSpecification.getStart(),
-				reorderedExecutionSpecification,
-				reorderedExecutionSpecification.getFinish(),
-				enclosingExecutionSpecification.getStart(),
-				enclosingExecutionSpecification,
-				enclosingExecutionSpecification.getFinish()));
+				message.getSendEvent(),
+				message.getReceiveEvent(),
+				executionSpecification2.getStart(),
+				executionSpecification2,
+				executionSpecification2.getFinish()));
+
 	}
 
-	/**
-	 * Reorders an {@link ExecutionSpecification} above its enclosing one, but with its finishing end still enclosed.
-	 * <p>
-	 * This happens when the enclosing {@link ExecutionSpecification} is on another lifeline, and the reordered {@link ExecutionSpecification} is still partially covered by it after the reorder operation.
-	 */
 	@Test
-	public void testReorderFragmentExecutionSpecificationAboveEnclosingOneWithFinishingEndStillEnclosed() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification enclosingExecutionSpecification = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification reorderedExecutionSpecification = addOrderedExecutionSpecificationToInteraction(enclosingExecutionSpecification);
-		// The finishingEndPredecessor is the enclosing execution's start since the finish end of the reordered execution is still enclosed in it.
-		reorderServices.reorderFragment(reorderedExecutionSpecification, executionSpecification1.getFinish(), enclosingExecutionSpecification.getStart());
+	public void testReorderMessageInsideExecution() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		Message message = createMessage(interaction, lifeline1, lifeline2);
+		reorderServices.reorderMessage(message, getStartAnnotation(executionSpecification1), getStartAnnotation(message));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification1),
+				this.getStartAnnotation(message),
+				this.getFinishAnnotation(message),
+				this.getFinishAnnotation(executionSpecification1)));
+		assertContains(interaction.getFragments(), List.of(
+				executionSpecification1.getStart(),
+				executionSpecification1,
+				message.getSendEvent(),
+				message.getReceiveEvent(),
+				executionSpecification1.getFinish()));
+	}
+
+	@Test
+	public void testReorderMessageInsideInteractionOperand() {
+		CombinedFragment combinedFragment = createCombinedFragment(interaction, lifeline1, lifeline2);
+		Message message = createMessage(interaction, lifeline1, lifeline2);
+		assertEquals(1, combinedFragment.getOperands().size());
+		reorderServices.reorderMessage(message, getStartAnnotation(combinedFragment.getOperands().get(0)), getStartAnnotation(message));
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(combinedFragment),
+				this.getStartAnnotation(combinedFragment.getOperands().get(0)),
+				this.getStartAnnotation(message),
+				this.getFinishAnnotation(message),
+				this.getFinishAnnotation(combinedFragment)));
+		assertContains(interaction.getFragments(), List.of(combinedFragment));
+		assertContains(combinedFragment.getOperands().get(0).getFragments(), List.of(
+				message.getSendEvent(),
+				message.getReceiveEvent()));
+	}
+
+	@Test
+	public void testReorderCombinedFragmentFirst() {
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
+		CombinedFragment combinedFragment = createCombinedFragment(interaction, lifeline1);
+		reorderServices.reorderFragment(combinedFragment, null, null);
+		assertEquals(1, combinedFragment.getOperands().size());
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(combinedFragment),
+				this.getStartAnnotation(combinedFragment.getOperands().get(0)),
+				this.getFinishAnnotation(combinedFragment),
+				this.getStartAnnotation(executionSpecification),
+				this.getFinishAnnotation(executionSpecification)));
+		assertContains(interaction.getFragments(), List.of(
+				combinedFragment,
+				executionSpecification.getStart(),
+				executionSpecification,
+				executionSpecification.getFinish()));
+	}
+
+	@Test
+	public void testReorderCombinedFragmentAfterExecution() {
+		CombinedFragment combinedFragment = createCombinedFragment(interaction, lifeline1);
+		ExecutionSpecification executionSpecification = createExecutionSpecification(interaction, lifeline1);
+		reorderServices.reorderFragment(combinedFragment, getFinishAnnotation(executionSpecification), getStartAnnotation(combinedFragment));
+		assertEquals(1, combinedFragment.getOperands().size());
+		assertContains(getOrdering(), List.of(
+				this.getStartAnnotation(executionSpecification),
+				this.getFinishAnnotation(executionSpecification),
+				this.getStartAnnotation(combinedFragment),
+				this.getStartAnnotation(combinedFragment.getOperands().get(0)),
+				this.getFinishAnnotation(combinedFragment)));
+		assertContains(interaction.getFragments(), List.of(
+				executionSpecification.getStart(),
+				executionSpecification,
+				executionSpecification.getFinish(),
+				combinedFragment));
+	}
+
+	@Test
+	public void testReorderCombinedFragmentBetweenExecutions() {
+		ExecutionSpecification executionSpecification1 = createExecutionSpecification(interaction, lifeline1);
+		ExecutionSpecification executionSpecification2 = createExecutionSpecification(interaction, lifeline1);
+		CombinedFragment combinedFragment = createCombinedFragment(interaction, lifeline1);
+		reorderServices.reorderFragment(combinedFragment, getFinishAnnotation(executionSpecification1), getStartAnnotation(combinedFragment));
+		assertEquals(1, combinedFragment.getOperands().size());
+		assertContains(getOrdering(), List.of(
+				getStartAnnotation(executionSpecification1),
+				getFinishAnnotation(executionSpecification1),
+				getStartAnnotation(combinedFragment),
+				getStartAnnotation(combinedFragment.getOperands().get(0)),
+				getFinishAnnotation(combinedFragment),
+				getStartAnnotation(executionSpecification2),
+				getFinishAnnotation(executionSpecification2)));
 		assertContains(interaction.getFragments(), List.of(
 				executionSpecification1.getStart(),
 				executionSpecification1,
 				executionSpecification1.getFinish(),
-				reorderedExecutionSpecification.getStart(),
-				reorderedExecutionSpecification,
-				enclosingExecutionSpecification.getStart(),
-				enclosingExecutionSpecification,
-				reorderedExecutionSpecification.getFinish(),
-				enclosingExecutionSpecification.getFinish()));
-	}
-
-	/**
-	 * Reorders a {@link Message} below another message inside its enclosing {@link ExecutionSpecification} (source and target).
-	 * <p>
-	 * Both messages have the same source and target {@link ExecutionSpecification}.
-	 */
-	@Test
-	public void testReorderMessageBelowOtherMessageInsideEnclosingExecutionSpecifications() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addOrderedExecutionSpecificationToInteraction(executionSpecification1);
-		Message message1 = createMessage(executionSpecification2);
-		Message message2 = createMessage((MessageOccurrenceSpecification) message1.getReceiveEvent());
-		reorderServices.reorderMessage(message1, message2.getReceiveEvent(), message1.getSendEvent());
-		assertContains(interaction.getFragments(), List.of(
-				executionSpecification1.getStart(),
-				executionSpecification1,
+				combinedFragment,
 				executionSpecification2.getStart(),
 				executionSpecification2,
-				message2.getSendEvent(),
-				message2.getReceiveEvent(),
-				message1.getSendEvent(),
-				message1.getReceiveEvent(),
-				executionSpecification2.getFinish(),
-				executionSpecification1.getFinish()));
-		// Messages aren't reordered, only the send/receive events.
-		assertContains(interaction.getMessages(), List.of(
-				message1,
-				message2));
+				executionSpecification2.getFinish()));
 	}
 
-	/**
-	 * Reorders a {@link Message} (with its send/receive not in the interaction's fragments) below another message inside its enclosing {@link ExecutionSpecification}.
-	 * <p>
-	 * The messages aren't reordered: their send/receive events have to be in the interaction's fragments.
-	 */
-	@Test
-	public void testReorderMessageSendReceiveOccurrencesNotInInteraction() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addOrderedExecutionSpecificationToInteraction(executionSpecification1);
-		Message message1 = createMessage(executionSpecification2);
-		Message message2 = createMessage((MessageOccurrenceSpecification) message1.getReceiveEvent());
-		assertTrue(message1.getSendEvent() instanceof OccurrenceSpecification);
-		assertTrue(message1.getReceiveEvent() instanceof OccurrenceSpecification);
-		message1.getInteraction().getFragments().remove((OccurrenceSpecification) message1.getSendEvent());
-		message1.getInteraction().getFragments().remove((OccurrenceSpecification) message1.getReceiveEvent());
-		reorderServices.reorderMessage(message1, message2.getReceiveEvent(), message1.getSendEvent());
-		assertContains(interaction.getFragments(), List.of(
-				executionSpecification1.getStart(),
-				executionSpecification1,
-				executionSpecification2.getStart(),
-				executionSpecification2,
-				message2.getSendEvent(),
-				message2.getReceiveEvent(),
-				executionSpecification2.getFinish(),
-				executionSpecification1.getFinish()));
-		// Messages aren't reordered, only the send/receive events.
-		assertContains(interaction.getMessages(), List.of(
-				message1,
-				message2));
-	}
 
-	/**
-	 * Reorders a {@link Message} below its enclosing executions (source and target).
-	 * <p>
-	 * The message send/receive events are moved below the {@link ExecutionSpecification} finish occurrence.
-	 */
-	@Test
-	public void testReorderMessageBelowEnclosingExecutions() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addOrderedExecutionSpecificationToInteraction(executionSpecification1);
-		Message message1 = createMessage(executionSpecification2);
-		Message message2 = createMessage((MessageOccurrenceSpecification) message1.getReceiveEvent());
-		reorderServices.reorderMessage(message1, executionSpecification1.getFinish(), message1.getSendEvent());
-		assertContains(interaction.getFragments(), List.of(
-				executionSpecification1.getStart(),
-				executionSpecification1,
-				executionSpecification2.getStart(),
-				executionSpecification2,
-				message2.getSendEvent(),
-				message2.getReceiveEvent(),
-				executionSpecification2.getFinish(),
-				executionSpecification1.getFinish(),
-				message1.getSendEvent(),
-				message1.getReceiveEvent()));
-		// Messages aren't reordered, only the send/receive events.
-		assertContains(interaction.getMessages(), List.of(
-				message1,
-				message2));
-	}
-
-	/**
-	 * Reorders a {@link Message} inside enclosing executions (source and target).
-	 * <p>
-	 * The message is originally below the executions.
-	 */
-	@Test
-	public void testReorderMessageInsideEnclosingExecutions() {
-		ExecutionSpecification executionSpecification1 = addOrderedExecutionSpecificationToInteraction();
-		ExecutionSpecification executionSpecification2 = addOrderedExecutionSpecificationToInteraction(executionSpecification1);
-		Message message1 = createMessage(executionSpecification1.getFinish());
-		reorderServices.reorderMessage(message1, executionSpecification2.getStart(), message1.getSendEvent());
-		assertContains(interaction.getFragments(), List.of(
-				executionSpecification1.getStart(),
-				executionSpecification1,
-				executionSpecification2.getStart(),
-				executionSpecification2,
-				message1.getSendEvent(),
-				message1.getReceiveEvent(),
-				executionSpecification2.getFinish(),
-				executionSpecification1.getFinish()));
-		assertContains(interaction.getMessages(), List.of(message1));
-	}
 
 	private void assertContains(List<?> from, List<?> content) {
 		assertEquals(content.size(), from.size());
@@ -462,80 +426,106 @@ public class SequenceDiagramReorderServicesTest extends AbstractServicesTest {
 		}
 	}
 
-	private void createInteractionWithTwoLifelines() {
-		this.interaction = create(Interaction.class);
+	private Interaction createInteractionWithTwoLifelines() {
+		Interaction i = create(Interaction.class);
 		this.lifeline1 = create(Lifeline.class);
 		this.lifeline2 = create(Lifeline.class);
-		this.interaction.getLifelines().add(lifeline1);
-		this.interaction.getLifelines().add(lifeline2);
+		i.getLifelines().add(lifeline1);
+		i.getLifelines().add(lifeline2);
+		return i;
 	}
 
-	private void createInteractionWithTwoMessageOccurrenceSpecifications() {
-		this.interaction = create(Interaction.class);
-		this.messageOccurrenceSpecification1 = create(MessageOccurrenceSpecification.class);
-		this.messageOccurrenceSpecification2 = create(MessageOccurrenceSpecification.class);
-		this.interaction.getFragments().add(messageOccurrenceSpecification1);
-		this.interaction.getFragments().add(messageOccurrenceSpecification2);
-	}
-
-	private ExecutionSpecification addUnorderedExecutionSpecificationToInteraction() {
-		if (this.interaction == null) {
-			this.interaction = create(Interaction.class);
-		}
+	private ExecutionSpecification createExecutionSpecification(Element parent, Lifeline lifeline) {
 		ExecutionSpecification executionSpecification = create(ActionExecutionSpecification.class);
+		executionSpecification.getCovereds().add(lifeline);
 		ExecutionOccurrenceSpecification start = create(ExecutionOccurrenceSpecification.class);
+		start.getCovereds().add(lifeline);
 		start.setExecution(executionSpecification);
 		executionSpecification.setStart(start);
 		ExecutionOccurrenceSpecification finish = create(ExecutionOccurrenceSpecification.class);
+		finish.getCovereds().add(lifeline);
 		finish.setExecution(executionSpecification);
 		executionSpecification.setFinish(finish);
-		interaction.getFragments().add(executionSpecification);
-		interaction.getFragments().add(start);
-		interaction.getFragments().add(finish);
-		return executionSpecification;
-	}
-
-	private ExecutionSpecification addOrderedExecutionSpecificationToInteraction() {
-		return this.addOrderedExecutionSpecificationToInteraction(null);
-	}
-
-	private ExecutionSpecification addOrderedExecutionSpecificationToInteraction(ExecutionSpecification enclosingExecution) {
-		if (this.interaction == null) {
-			this.interaction = create(Interaction.class);
-		}
-		ExecutionSpecification executionSpecification = create(ActionExecutionSpecification.class);
-		ExecutionOccurrenceSpecification start = create(ExecutionOccurrenceSpecification.class);
-		start.setExecution(executionSpecification);
-		executionSpecification.setStart(start);
-		ExecutionOccurrenceSpecification finish = create(ExecutionOccurrenceSpecification.class);
-		finish.setExecution(executionSpecification);
-		executionSpecification.setFinish(finish);
-		if (enclosingExecution == null) {
+		if (parent instanceof Interaction interaction) {
 			interaction.getFragments().add(start);
 			interaction.getFragments().add(executionSpecification);
 			interaction.getFragments().add(finish);
-		} else {
-			int enclosingExecutionIndex = interaction.getFragments().indexOf(enclosingExecution);
-			interaction.getFragments().add(enclosingExecutionIndex + 1, start);
-			interaction.getFragments().add(enclosingExecutionIndex + 2, executionSpecification);
-			interaction.getFragments().add(enclosingExecutionIndex + 3, finish);
+		} else if (parent instanceof InteractionOperand operand) {
+			operand.getFragments().add(start);
+			operand.getFragments().add(executionSpecification);
+			operand.getFragments().add(finish);
 		}
+		this.getOrdering().add(createAnnotationWithReference(start, executionSpecification, SequenceDiagramServices.START_ANNOTATION_SOURCE));
+		this.getOrdering().add(createAnnotationWithReference(finish, executionSpecification, SequenceDiagramServices.END_ANNOTATION_SOURCE));
 		return executionSpecification;
 	}
 
-	private Message createMessage(InteractionFragment fragmentAbove) {
+	private Message createMessage(Interaction parent, Lifeline sendLifeline, Lifeline receiveLifeline) {
 		Message message = create(Message.class);
-		MessageOccurrenceSpecification messageSendEvent = create(MessageOccurrenceSpecification.class);
-		message.setSendEvent(messageSendEvent);
-		messageSendEvent.setMessage(message);
-		MessageOccurrenceSpecification messageReceiveEvent = create(MessageOccurrenceSpecification.class);
-		message.setReceiveEvent(messageReceiveEvent);
-		messageReceiveEvent.setMessage(message);
-		fragmentAbove.getEnclosingInteraction().getMessages().add(message);
-		int executionIndex = interaction.getFragments().indexOf(fragmentAbove);
-		interaction.getFragments().add(executionIndex + 1, messageSendEvent);
-		interaction.getFragments().add(executionIndex + 2, messageReceiveEvent);
+		MessageOccurrenceSpecification sendEvent = create(MessageOccurrenceSpecification.class);
+		sendEvent.getCovereds().add(sendLifeline);
+		sendEvent.setMessage(message);
+		message.setSendEvent(sendEvent);
+		MessageOccurrenceSpecification receiveEvent = create(MessageOccurrenceSpecification.class);
+		receiveEvent.getCovereds().add(receiveLifeline);
+		receiveEvent.setMessage(message);
+		message.setReceiveEvent(receiveEvent);
+		interaction.getMessages().add(message);
+		interaction.getFragments().add(sendEvent);
+		interaction.getFragments().add(receiveEvent);
+		this.getOrdering().add(createAnnotationWithReference(sendEvent, message, SequenceDiagramServices.START_ANNOTATION_SOURCE));
+		this.getOrdering().add(createAnnotationWithReference(receiveEvent, message, SequenceDiagramServices.END_ANNOTATION_SOURCE));
 		return message;
 	}
 
+	private CombinedFragment createCombinedFragment(Element parent, Lifeline... lifelines) {
+		CombinedFragment combinedFragment = create(CombinedFragment.class);
+		combinedFragment.getCovereds().addAll(Arrays.asList(lifelines));
+		InteractionOperand interactionOperand = create(InteractionOperand.class);
+		interactionOperand.getCovereds().addAll(Arrays.asList(lifelines));
+		combinedFragment.getOperands().add(interactionOperand);
+		if (parent instanceof Interaction interaction) {
+			interaction.getFragments().add(combinedFragment);
+		} else if (parent instanceof InteractionOperand operand) {
+			operand.getFragments().add(interactionOperand);
+		}
+		this.getOrdering().add(createAnnotationWithReference(combinedFragment, null, SequenceDiagramServices.START_ANNOTATION_SOURCE));
+		this.getOrdering().add(createAnnotationWithReference(interactionOperand, null, SequenceDiagramServices.START_ANNOTATION_SOURCE));
+		this.getOrdering().add(createAnnotationWithReference(combinedFragment, null, SequenceDiagramServices.END_ANNOTATION_SOURCE));
+		return combinedFragment;
+
+	}
+
+	private EAnnotation createAnnotationWithReference(InteractionFragment fragment, Element baseElement, String source) {
+		Objects.requireNonNull(fragment);
+		Objects.requireNonNull(source);
+		EAnnotation annotation = EcoreFactory.eINSTANCE.createEAnnotation();
+		annotation.setSource(source);
+		annotation.getReferences().add(fragment);
+		if (baseElement != null) {
+			annotation.getReferences().add(baseElement);
+		}
+		return annotation;
+	}
+
+	private EAnnotation getStartAnnotation(Element element) {
+		return getAnnotation(element, SequenceDiagramServices.START_ANNOTATION_SOURCE);
+	}
+
+	private EAnnotation getFinishAnnotation(Element element) {
+		return getAnnotation(element, SequenceDiagramServices.END_ANNOTATION_SOURCE);
+	}
+
+	private EAnnotation getAnnotation(Element element, String source) {
+		return this.getOrdering().stream()
+				.filter(EAnnotation.class::isInstance)
+				.map(EAnnotation.class::cast)
+				.filter(annotation -> Objects.equals(annotation.getSource(), source) && annotation.getReferences().contains(element))
+				.findFirst()
+				.orElse(null);
+	}
+
+	private List<EObject> getOrdering() {
+		return this.interaction.getEAnnotation(SequenceDiagramServices.ORDERING_ANNOTATION_SOURCE).getContents();
+	}
 }
